resolution bug overflow page mont fuji

--- a/src/components/cards.css
+++ b/src/components/cards.css
@@ -84,6 +84,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    overflow: hidden;
 }
 
 .card-text-frise {
